fix(RHOAIENG-25648): added fix for overflow markdown catalog issue

--- a/frontend/src/components/markdown/MarkdownComponent.scss
+++ b/frontend/src/components/markdown/MarkdownComponent.scss
@@ -34,7 +34,7 @@
     code {
       font-family: var(--pf-t--global--font--family--mono);
       font-size: var(--pf-t--global--font--size--body--sm);
-      white-space: pre;
+      white-space: pre-wrap;
     }
   }
 
